<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="
          http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- Project Object Model -->
    <!-- All POMs extend the Super POM unless explicitly set -->
    <!--<parent>*</parent>-->

    <groupId>ru.otus</groupId>
    <artifactId>otus-java</artifactId>
    <version>2019-09-SNAPSHOT</version>

    <packaging>pom</packaging>

    <developers>
        <developer>
            <name>Vladislav Sultanyarov</name>
        </developer>
    </developers>

    <modules>
        <module>hw01-maven</module>
        <module>hw03-generics-collections</module>
        <module>hw06-gc</module>
        <module>hw09-byteCodes</module>
        <module>hw10-annotations</module>
        <module>hw11-solid</module>
        <module>hw13-structuralPatterns</module>
        <module>hw15-io</module>
    </modules>

    <properties>
        <junit.jupiter.version>5.3.2</junit.jupiter.version>
        <mockito-core.version>3.0.0</mockito-core.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>
        <com.google.guava.version>27.1-jre</com.google.guava.version>
        <junit.version>4.12</junit.version>
        <my.variable>42</my.variable>
        <asm.version>7.2</asm.version>
        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
        <gson.version>2.8.6</gson.version>
        <javax.json-api.version>1.1.4</javax.json-api.version>
        <javax.json.version>1.1.4</javax.json.version>

        <com.projectlombok.version>1.18.10</com.projectlombok.version>
        <lombok.verbose>true</lombok.verbose>
        <lombok.addOutputDirectory>false</lombok.addOutputDirectory>
        <lombok.sourceDirectory>${project.basedir}/src/main/java</lombok.sourceDirectory>
        <lombok.testSourceDirectory>${project.basedir}/src/test/java</lombok.testSourceDirectory>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${com.google.guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${com.projectlombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <!--region Test dependencies - JUnit Jupiter, AssertJ, Hamcrest, Mockito -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
                <scope>test</scope>
            </dependency>
            <!--endregion-->

            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.json</groupId>
                <artifactId>javax.json-api</artifactId>
                <version>${javax.json-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.json</artifactId>
                <version>${javax.json.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>